--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,7 +25,11 @@ jobs:
     # Setup Node
     - name: Setup Node
       uses: actions/setup-node@v1
-    
+
+    # Update Node
+    - name: Setup Node
+      run: npm update
+
     # Install SFDX CLI
     - name: Install SFDX CLI
       run: npm install sfdx-cli --global
