--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,7 +33,11 @@ jobs:
 
     # Install SFDX CLI
     - name: Install SFDX CLI
-      run: npm install sfdx-cli --global
+      run: npm install sfdx-cli 
+
+    # Show files
+    - name: Show files
+      run: npm install sfdx-cli 
 
     # Authorize SF Org
     - name: Authorize SF Org
