--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,7 +21,7 @@ jobs:
     steps:
 
     # Update Node
-    - name: Version Node
+    - name: Update node
       run: npm install node
 
     # Check Node Version
@@ -33,7 +33,7 @@ jobs:
 
     # Install SFDX CLI
     - name: Install SFDX CLI
-      run: npm install sfdx-cli 
+      run: npm install sfdx-cli --global
 
     # Show files
     - name: Show files
@@ -45,7 +45,7 @@ jobs:
         CLIENT_ID: ${{ secrets.SALESFORCEPRODCLIENTID }}
         USERNAME: ${{ secrets.SALESFORCEPRODUSERNAME }}
         INSTANCE_URL: ${{ secrets.SALESFORCEPRODINSTANCEURL }}
-      run: sfdx force:auth:jwt:grant --clientid $CLIENT_ID --jwtkeyfile .\buildfiles\server.key --username $USERNAME --instanceurl $INSTANCE_URL -a prod
+      run: sfdx force:auth:jwt:grant --clientid $CLIENT_ID --jwtkeyfile ".\buildfiles\server.key" --username $USERNAME --instanceurl $INSTANCE_URL -a prod
 
     # Convert to Deploy Source
     - name: Convert to Deploy Source
