--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,8 +5,8 @@
       "default": true
     }
   ],
-  "name": "MyEverythingProject",
+  "name": "MyPersonalDevOrg",
   "namespace": "",
   "sfdcLoginUrl": "https://login.salesforce.com",
-  "sourceApiVersion": "52.0"
+  "sourceApiVersion": "53.0"
 }
