--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -4,7 +4,7 @@ name: Validate PR on develop branch
 on:
   push:
     branches:
-      - main
+      - master
     paths:
         - 'force-app/**'
   pull_request:
