--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,9 +22,10 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
-    # Setup Node
-    - name: Setup Node
-      uses: actions/setup-node@v1
+    # Now we install nodejs in the VM, and specify version 14
+    - uses: actions/setup-node@v2
+      with:
+        node-version: '14'
     
     # Install SFDX CLI
     - name: Install SFDX CLI
