--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -36,12 +36,13 @@ jobs:
           echo "$HOME/sfdx/bin" >> $GITHUB_PATH
           ~/sfdx/bin/sfdx version
 
-    # Authorize SF Org
-    - name: Authorize SF Org
-      env:
-        CLIENT_ID: ${{ secrets.SALESFORCEPRODCLIENTID }}
-        USERNAME: ${{ secrets.SALESFORCEPRODUSERNAME }}
-        INSTANCE_URL: ${{ secrets.SALESFORCEPRODINSTANCEURL }}
-      run: sfdx force:auth:jwt:grant --clientid $CLIENT_ID --jwtkeyfile $(server.key) --username $USERNAME --instanceurl $INSTANCE_URL -a prod
+   # The URL is stored in the Github Secret named SFDX_INTEGRATION_URL
+   # so here we store the URL into a text file
+    - name: 'Populate auth file with SFDX_URL secret of integration org'
+      shell: bash
+      run: echo ${{ secrets.SFDX_INTEGRATION_URL}} > ./SFDX_INTEGRATION_URL.txt
+        
+   # Authenticate to org using the URL stored in the text file
+    - name: 'Authenticate to Integration Org'
+      run: sfdx auth:sfdxurl:store -f ./SFDX_INTEGRATION_URL.txt -s -a din_personal
 
-  
