--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -49,6 +49,4 @@ jobs:
         CLIENT_ID: ${{ secrets.SALESFORCEPRODCLIENTID }}
         USERNAME: ${{ secrets.SALESFORCEPRODUSERNAME }}
         INSTANCE_URL: ${{ secrets.SALESFORCEPRODINSTANCEURL }}
-      run: sfdx force:auth:jwt:grant --clientid $CLIENT_ID -f '/home/runner/work/LWCWire/LWCWire/server.key' --username $USERNAME --instanceurl $INSTANCE_URL -a prod
-
-  
+      run: sfdx auth:jwt:grant --clientid $CLIENT_ID --jwtkeyfile '/home/runner/work/LWCWire/LWCWire/server.key' --username $USERNAME --instanceurl $INSTANCE_URL -a prod
