--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -38,22 +38,47 @@ jobs:
           pwd
           ls -l
 
-   # The URL is stored in the Github Secret named SFDX_INTEGRATION_URL
-   # so here we store the URL into a text file
-    - name: 'Populate auth file with SFDX_URL secret of integration org'
-      shell: bash
-      run: echo ${{ secrets.SFDX_INTEGRATION_URL}} > ./SFDX_INTEGRATION_URL.txt
+    - name: 'Installing sfdx git delta'
+      run: | 
+             echo y | sfdx plugins:install sfdx-git-delta
+             sfdx plugins 
+      
+     # Install java as it is required for the next step
+    - name: 'Installing java'
+      run: sudo apt-get install openjdk-8-jdk
 
- # Authorize SF Org
-    - name: Authorize SF Org
-      run: |
           sfdx auth:jwt:grant --clientid 3MVG9d8..z.hDcPKzvrnfeVGPAgyn.AF4BNf6_hLG9R_KMZUzQnyaEiv0uV5QZHXJsOS.17uFHNyUjobJy34A --jwtkeyfile bajajauto.server.key --username dineshkhamele@gmail.com --instanceurl https://login.salesforce.com
 
-    # Convert to Deploy Source
-    - name: Convert to Deploy Source
-      run: sfdx force:source:convert -r ./force-app -d ./toDeploy
-    
+ # We use SFDX Git Delta to create a directory with only the metadata that has changed.
+            # this allows us to deploy only those changes, as opposed to deploying the entire branch. 
+            # This helps reducing deployment times
+    - name: 'Create delta packages for new, modified or deleted metadata'
+      run: | 
+                  mkdir changed-sources
+                  sfdx sgd:source:delta --to "HEAD" --from "HEAD^" --output changed-sources/ --generate-delta --source force-app/ 
+            # Now we can use the sfdx scanner to scan the code in the delta directory
+            # The output of the scan is stored in a file called apexScanResults.sarif
 
-    # Deploy
-    - name : Deploy to SF Org
-      run: sfdx force:mdapi:deploy -d ./toDeploy -u dineshkhamele@gmail.com -w 10
+            # The .sarif file can later be uploaded to github, so that we can see the 
+            # results of the scan directly from the PR.
+
+    - name: 'Scan code'
+      run: |
+                  cd changed-sources
+                  sfdx scanner:run --format sarif --target './**/*.cls' --category "Design,Best Practices,Performance" --outfile 'apexScanResults.sarif'  
+                  cd ..
+            # Now we upload the .sarif file as explained in the previous step
+    - name: Upload SARIF file
+      uses: github/codeql-action/upload-sarif@v1
+      with:
+           sarif_file: changed-sources/apexScanResults.sarif
+
+            # We do a check-only deploy and we only run the tests specified in the PR
+            # If the env variable does not equal 'all', we know that there is a list of
+            # tests that can be run
+
+    - name: 'Check-only deploy delta changes'
+      run: |
+            sfdx force:source:deploy -p "changed-sources/force-app" --checkonly --json
+    - name: 'Deploy destructive changes (if any)'
+      run: sfdx force:mdapi:deploy -d "changed-sources/destructiveChanges" --checkonly --ignorewarnings
