--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -38,6 +38,9 @@ jobs:
           pwd
           ls -l
 
+   # Authorize org
+    - name: 'Authorize org'
+      run: |
           sfdx auth:jwt:grant --clientid 3MVG9d8..z.hDcPKzvrnfeVGPAgyn.AF4BNf6_hLG9R_KMZUzQnyaEiv0uV5QZHXJsOS.17uFHNyUjobJy34A --jwtkeyfile bajajauto.server.key --username dineshkhamele@gmail.com --instanceurl https://login.salesforce.com
 
     - name: 'Check-only deploy delta changes'
